--- a/package.json
+++ b/package.json
@@ -33,7 +33,11 @@
     "vite": "2.6.14"
   },
   "dependencies": {
+    "@koa/cors": "^3.2.0",
     "electron-updater": "4.6.2",
+    "koa": "^2.13.4",
+    "koa-static": "^5.0.0",
+    "python-struct": "^1.1.3",
     "vue": "3.2.22",
     "vue-router": "4.0.12"
   }
