--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   "main": "packages/main/dist/index.cjs",
   "scripts": {
     "build": "node scripts/build.js",
-    "precompile": "cross-env MODE=production npm run build",
-    "compile": "electron-builder build --config electron-builder.config.js --dir --config.asar=false",
+    "precompile": "npm version --new-version patch && cross-env MODE=production npm run build",
+    "compile": "CSC_IDENTITY_AUTO_DISCOVERY=false electron-builder build --config electron-builder.config.js --dir --config.asar=false",
     "pretest": "npm run build",
     "test": "node tests/app.spec.js",
     "watch": "node scripts/watch.js",
