--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "dependencies": {
     "@koa/cors": "^3.2.0",
+    "electron-config": "^2.0.0",
     "electron-updater": "4.6.2",
     "koa": "^2.13.4",
     "koa-static": "^5.0.0",
