--- a/package.json
+++ b/package.json
@@ -34,11 +34,19 @@
   },
   "dependencies": {
     "@koa/cors": "^3.2.0",
+    "adm-zip": "^0.5.9",
+    "autoprefixer": "^10.4.4",
     "electron-config": "^2.0.0",
     "electron-updater": "4.6.2",
+    "epub-parser": "^0.2.5",
     "koa": "^2.13.4",
     "koa-static": "^5.0.0",
+    "md5": "^2.3.0",
+    "mime-types": "^2.1.35",
+    "pdf-lib": "^1.17.1",
+    "postcss": "^8.4.12",
     "python-struct": "^1.1.3",
+    "tailwindcss": "^3.0.23",
     "vue": "3.2.22",
     "vue-router": "4.0.12"
   },
