--- a/package.json
+++ b/package.json
@@ -37,8 +37,10 @@
     "adm-zip": "^0.5.9",
     "autoprefixer": "^10.4.4",
     "electron-config": "^2.0.0",
+    "electron-store": "^8.0.1",
     "electron-updater": "4.6.2",
     "epub-parser": "^0.2.5",
+    "fontkit": "^1.8.1",
     "koa": "^2.13.4",
     "koa-static": "^5.0.0",
     "md5": "^2.3.0",
