--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "dependencies": {
     "@koa/cors": "^3.2.0",
+    "@pdf-lib/fontkit": "^1.1.1",
     "adm-zip": "^0.5.9",
     "autoprefixer": "^10.4.4",
     "electron-config": "^2.0.0",
@@ -45,6 +46,7 @@
     "md5": "^2.3.0",
     "mime-types": "^2.1.35",
     "pdf-lib": "^1.17.1",
+    "pdfkit": "^0.13.0",
     "postcss": "^8.4.12",
     "python-struct": "^1.1.3",
     "tailwindcss": "^3.0.23",
